<resources>
    <string name="app_name">Maths</string>
    <string name="select_category">Select Category</string>
    <string name="select_quiz_category">Select Quiz Category</string>
    <string name="times_tables">Times Tables</string>
    <string name="choose_times_tables">Choose Times Tables</string>
    <string name="tap_to_start">Tap to start</string>
    <string name="tap_to_restart">Tap to restart</string>
    <string name="your_final_score">Your final score is</string>
    <string name="check_your_answers">Check your answers</string>
    <string name="answers">Answers</string>
    <string name="your_answers">Your answers</string>
    <string name="you_answered">You answered: </string>
    <string name="score">Score</string>
    <string name="score_correct">Correct</string>
    <string name="score_incorrect">Incorrect</string>
    <string name="score_skipped">Skipped</string>
    <string name="play_again">Play Again</string>
    <string name="close">Close</string>
    <string name="share">Share</string>
    <string name="random">Random</string>
    <string name="choose_difficulty_level">Choose Difficulty Level</string>


    <string name="level">Number Range</string>
    <string name="addition">Add</string>
    <string name="subtraction">Subtract</string>
    <string name="multiplication">Multiply</string>
    <string name="divide">Divide</string>
    <string name="quiz">Quiz</string>

    <string name="level_0_10">0 to 10</string>
    <string name="level_0_15">0 to 15</string>
    <string name="level_0_20">0 to 20</string>
    <string name="level_0_25">0 to 25</string>

    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="expert">Expert</string>

    <string name="symbol_times_tables">=</string>
    <string name="symbol_addition">+</string>
    <string name="symbol_subtraction">-</string>
    <string name="symbol_multiplication">X</string>
    <string name="symbol_divide">/</string>

    <string name="next">Next Question</string>
    <string name="correct">:) You answered correctly.</string>
    <string name="wrong">:( Oops wrong answer.</string>
    <string name="title_activity_times_tables">TimesTables</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>

    <string-array name="times_tables">
        <item></item>
        <item>one</item>
        <item>two</item>
        <item>three</item>
        <item>four</item>
        <item>five</item>
        <item>six</item>
        <item>seven</item>
        <item>eight</item>
        <item>nine</item>
        <item>ten</item>
        <item>eleven</item>
        <item>twelve</item>
        <item>thirteen</item>
        <item>fourteen</item>
        <item>fifteen</item>
        <item>sixteen</item>
        <item>seventeen</item>
        <item>eighteen</item>
        <item>nineteen</item>
        <item>twenty</item>
    </string-array>

    <string name="saved_is_sound">is sound</string>

</resources>
