<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin_d"
    android:background="@drawable/background_img"
    tools:context=".QuizResult">

    <TextView
        android:id="@+id/textView_scoreLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:text="@string/score"
        android:fontFamily="@font/stencil_regular"
        android:textAlignment="center"
        android:textColor="@color/coloBlack"
        android:textSize="60sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView_scoreLabel"
        android:layout_above="@+id/linearLayout_action"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_scoreTotal"
                android:layout_below="@+id/textView_scoreLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:fontFamily="@font/stencil_bold"
                android:textAlignment="center"
                android:textSize="90sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_scoreTotal"
                android:id="@+id/textView_scoreTotalLabel"
                android:gravity="center"
                android:fontFamily="@font/stencil_bold"
                android:layout_marginTop="-30dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin_m"
                android:text="@string/score" />

            <LinearLayout
                android:layout_below="@+id/textView_scoreTotalLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/activity_vertical_margin_m"
                android:weightSum="3">

                <TextView
                    android:id="@+id/textView_answerCount"
                    style="@style/ScoreCountStyle"
                    android:textColor="@color/coloCorrectAns"
                    android:text="10" />

                <TextView
                    android:id="@+id/textView_answerWrong"
                    style="@style/ScoreCountStyle"
                    android:textColor="@color/coloWrongAns"
                    android:text="0" />

                <TextView
                    android:id="@+id/textView_answerSkip"
                    style="@style/ScoreCountStyle"
                    android:text="0" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    style="@style/ScoreLabelStyle"
                    android:textColor="@color/coloCorrectAns"
                    android:text="@string/score_correct" />

                <TextView
                    style="@style/ScoreLabelStyle"
                    android:textColor="@color/coloWrongAns"
                    android:text="@string/score_incorrect" />

                <TextView
                    style="@style/ScoreLabelStyle"
                    android:text="@string/score_skipped" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>
    <LinearLayout
        android:id="@+id/linearLayout_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:weightSum="3">

        <Button
            style="@style/ScoreButtonStyle"
            android:onClick="restartQuiz"
            android:drawableTop="@drawable/refresh"
            android:text="@string/play_again"/>

        <Button
            android:id="@+id/button_checkAnswers"
            style="@style/ScoreButtonStyle"
            android:onClick="showResult"
            android:drawableTop="@drawable/check_answers"
            android:text="@string/answers" />

        <!--<Button-->
            <!--style="@style/ScoreButtonStyle"-->
            <!--android:drawableTop="?attr/actionModeShareDrawable"-->
            <!--android:onClick="shareIt"-->
            <!--android:text="@string/share" />-->

        <Button
            style="@style/ScoreButtonStyle"
            android:onClick="close"
            android:drawableTop="@drawable/close"
            android:text="@string/close" />

    </LinearLayout>

</RelativeLayout>
